force-app/main/default/objects/OpportunityLineItem/fields/Orb_Price__c.field-meta.xml
<CustomField>
    <fullName>Orb_Price__c</fullName>
    <label>Orb Price</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>