force-app/main/default/objects/OpportunityLineItem/fields/overridden__c.field-meta.xml
<CustomField>
    <fullName>overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>overridden</label>
    <type>Checkbox</type>
</CustomField>