force-app/main/default/objects/OpportunityLineItem/fields/Price_type__c.field-meta.xml
<CustomField>
    <fullName>Price_type__c</fullName>
    <label>Price type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>